[package]
name = "rust-tcp-server-for-one-block"
version = "0.1.0"
description = "This project is created for OneBlock Substrate Baisc Class"
edition = "2021"
author = "sulnong <sunlong@88.com>"
repository = "https://github.com/cocmolla/rust-tcp-server-for-one-block"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
